previous and next post
Signed-off-by: 唐翼龙 <yilong.tang@1mifudao.com>

--- a/src/assets/docs.scss
+++ b/src/assets/docs.scss
@@ -6,7 +6,8 @@ html,
 body {
   margin: 0;
   padding: 0;
-  background: url(https://www.jessannkirby.com/wp-content/themes/jess_ann_kirby/inc/jessica_kirby-bg_watercolor-1.jpg) top center no-repeat;
+  background: url(http://ww1.sinaimg.cn/large/88b26e1cgy1ftdstdeacbj212f0d73zv.jpg) top center no-repeat;
+  background-size: contain;
 }
 
 pre {
