--- a/src/assets/docs.scss
+++ b/src/assets/docs.scss
@@ -57,7 +57,7 @@ hr {
   }
 
   &.tip {
-    background-color: #f3f5f7;
+    background-color: #ffffff00;
     border-color: #42b983;
 
     &:before {
@@ -109,6 +109,13 @@ table {
   h2:nth-child(2){
     display: none;
   }
+  
+}
+.content h2{
+  cursor: pointer;
+}
+.content h2:hover{
+  color: #42b983;
 }
 
 .post-content {
