--- a/src/assets/docs.scss
+++ b/src/assets/docs.scss
@@ -4,6 +4,7 @@ html{overflow-y:scroll;}
 
 html,
 body {
+  height: 100vh;
   margin: 0;
   padding: 0;
   background: url(http://ww1.sinaimg.cn/large/88b26e1cgy1ftdstdeacbj212f0d73zv.jpg) top center no-repeat;
