调整POST中的图片样式
Signed-off-by: 唐翼龙 <yilong.tang@1mifudao.com>

--- a/src/assets/docs.scss
+++ b/src/assets/docs.scss
@@ -112,6 +112,12 @@ table {
     display: none;
   }
 }
+.content {
+  .auto_img {
+    width: auto;
+    display: flex;
+  }
+}
 .content h2 {
   cursor: pointer;
 }
@@ -154,6 +160,7 @@ table {
     }
     .auto_img {
       width: auto;
+      display: flex;
     }
   }
 
